--- a/001 Администрирование/010 Задачи администрирования/Мониторинг.md
+++ b/001 Администрирование/010 Задачи администрирования/Мониторинг.md
@@ -1,50 +1,68 @@
 [Презентация](https://www.youtube.com/watch?v=ZkjdLhENuso&list=PLaFqU3KCWw6LPcuYVymLcXl3muC45mu3e&index=13)
 [Материалы](https://edu.postgrespro.ru/dba1-13/dba1_12_admin_monitoring.html)
 [Документация](https://postgrespro.ru/docs/postgresql/13/monitoring-stats)
-## Общие замечания
-Сбором статистики занимается фоновый процесс stats collector. 
-Каждый обслуживающий процесс собирает необходимую статистикув рамках каждой выполняемой транзакции. 
-Затем эта статистика передается процессу-коллектору. 
-Коллектор собирает и агрегирует статистику со всех обслуживающих процессов. 
-Раз в полсекунды коллектор сбрасывает статистику во временные файлы в каталог **PGDATA/pg_stat_tmp**. 
-> Перенесение этого каталога в файловую систему в памяти может положительно сказаться на производительности
-
-Статистика сохраняется при перезапуске сервера. 
-> Обнуление счетчиков происходит по команде администратора, а также при восстановлении сервера после сбоя.
-
-```
-select pg_stat_reset();
-```
-
-При нормальном выключении сервера (с контрольной точкой и дампом буфера на диск) статистика из временных файлов переносится в постоянное хранилище **PGDATA/pg_stat/**.
-
-> С 15 версии процесса stats collector больше нет. Обслуживающие процессы пишут непосредственно в специально отведенный раздел памяти. При выключении также происходит дамп содержимого буфера на диск.
+## Общее
+<details><summary><h4>Общие замечания</h4></summary>
+    
+  Сбором статистики занимается фоновый процесс stats collector. 
+  Каждый обслуживающий процесс собирает необходимую статистикув рамках каждой выполняемой транзакции. 
+  Затем эта статистика передается процессу-коллектору. 
+  Коллектор собирает и агрегирует статистику со всех обслуживающих процессов. 
+  Раз в полсекунды коллектор сбрасывает статистику во временные файлы в каталог **PGDATA/pg_stat_tmp**. 
+  > Перенесение этого каталога в файловую систему в памяти может положительно сказаться на производительности
+  
+  Статистика сохраняется при перезапуске сервера. 
+  > Обнуление счетчиков происходит по команде администратора, а также при восстановлении сервера после сбоя.
+  
+  ```
+  select pg_stat_reset();
+  ```
+  
+  При нормальном выключении сервера (с контрольной точкой и дампом буфера на диск) статистика из временных файлов переносится в постоянное хранилище **PGDATA/pg_stat/**.
+  
+  > С 15 версии процесса stats collector больше нет. Обслуживающие процессы пишут непосредственно в специально отведенный раздел памяти. При выключении также происходит дамп содержимого буфера на диск.
+ 
+</details>
 
 ## Мониторинг ОС
-iostat, vmstat, sar, top и др.
+<details><summary><h4>Утилиты</h4></summary>
+
+  iostat, vmstat, sar, top и др.
+
+</details>
 
 ## Мониторинг PG
-#### Статистика ввода-вывода
-```
-ALTER SYSTEM SET track_io_timing=on;
-select pg_reload_conf();
+<details><summary><h4>Статистика ввода-вывода</h4></summary>
+  
+  ```
+  ALTER SYSTEM SET track_io_timing=on;
+  select pg_reload_conf();
+  
+  pgbench -i dbname -- начальная инициализация
+  
+  select pg_stat_reset(); -- сброс статистики
+  select pg_stat_reset_shared('bgwriter'); -- статистика, связанная с работой фоновых процессов
+  
+  pg_bench -T 10 dbname
+  
+  select * from pg_stat_all_tables where relid = 'pgbench_accoubts'::regclass \gx -- количество операций ввода-вывода
+  select * from pg_statio_all_tables where relid = 'pgbench_accoubts'::regclass \gx -- в страницах
+  
+  -- Можно использовать для мониторинга использования индексов, минимальные или нулевые сканирования говорят о неиспользовании
+  select * from pg_stat_all_indexes where relid = 'pgbench_accoubts'::regclass \gx -- количество операций ввода-вывода
+  select * from pg_statio_all_indexes where relid = 'pgbench_accoubts'::regclass \gx -- в страницах
+  
+  -- Общие семантические варианты использования вышеперечисленных функций
+  _all_ _system_ _user_
+  
+  pg_stat_xact -- статистика текущей транзакции
+  
+  select * from pg_stat_database -- глобальная статисктика по всей базе
+  
+  ```
 
-pgbench -i dbname -- начальная инициализация
+</details>
 
-select pg_stat_reset(); -- сброс статистики
-select pg_stat_reset_shared('bgwriter'); -- статистика, связанная с работой фоновых процессов
-
-pg_bench -T 10 dbname
-
-select * from pg_stat_all_tables where relid = 'pgbench_accoubts'::regclass \gx -- количество операций ввода-вывода
-select * from pg_statio_all_tables where relid = 'pgbench_accoubts'::regclass \gx -- в страницах
--- Можно использовать для мониторинга использования индексов, минимальные или нулевые сканирования говорят о неиспользовании
-select * from pg_stat_all_indexes where relid = 'pgbench_accoubts'::regclass \gx -- количество операций ввода-вывода
-select * from pg_statio_all_indexes where relid = 'pgbench_accoubts'::regclass \gx -- в страницах
--- Общие семантические варианты использования вышеперечисленных функций
-_all_ _system_ _user_
-
-```
 
 
 
