--- a/001 Администрирование/010 Задачи администрирования/Мониторинг.md
+++ b/001 Администрирование/010 Задачи администрирования/Мониторинг.md
@@ -1,7 +1,7 @@
 [Презентация](https://www.youtube.com/watch?v=ZkjdLhENuso&list=PLaFqU3KCWw6LPcuYVymLcXl3muC45mu3e&index=13)
 [Материалы](https://edu.postgrespro.ru/dba1-13/dba1_12_admin_monitoring.html)
 [Документация](https://postgrespro.ru/docs/postgresql/13/monitoring-stats)
-## Общее
+### Общее
 <details><summary><h4>Общие замечания</h4></summary>
     
   Сбором статистики занимается фоновый процесс stats collector. 
@@ -24,14 +24,14 @@
  
 </details>
 
-## Мониторинг ОС
+### Мониторинг ОС
 <details><summary><h4>Утилиты</h4></summary>
 
   iostat, vmstat, sar, top и др.
 
 </details>
 
-## Мониторинг PG
+### Мониторинг PG
 <details><summary><h4>Статистика ввода-вывода</h4></summary>
   
   ```
