--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -1,5 +1,9 @@
-## Настройки
+## Скрипты администрирования
+
+<details><summary><h3>Настройки</h3></summary>
+       
 #### Вывод текста системной функции
+       
 ```
 -- psql
 \set ECHO_HIDDEN on
@@ -11,7 +15,11 @@
 ALTER SYSTEM SET track_io_timing=on;
 select pg_reload_conf();
 ```
-## Макросы
+
+</details>
+
+<details><summary><h3>Макросы</h3></summary>
+       
 #### Приведение к типу regclass
 ```
 select * from pg_attribute where attrelid = 'employees'::regclass
@@ -26,7 +34,11 @@ select atttypeid::regtype from pg_attribute
 ```
 \dT reg*
 ```
-## Системная информация PGSQL
+
+</details>
+       
+<details><summary><h3>Системная информация PGSQL</h3></summary>
+       
 #### Путь до основного файла таблицы относительно PGDATA
 ```
 select pg_relation_filepath('table');
@@ -73,7 +85,11 @@ AND relkind = 'r';  -- обычные таблицы
 SELECT pg_database_size('data_lowlevel');
 ```
 Размеры будут отличаться, т.к. вторая функция возвращает размер каталога файловой системы, а в этом каталоге находятся несколько служебных файлов.
-## PSQL
+
+</details>
+
+<details><summary><h3>PSQL</h3></summary>
+       
 ```
 \d object_name -- общая информация по объекту
 \d+ object_name -- дополнительная информация по объекту (ex - select text for view)
@@ -90,7 +106,11 @@ SELECT pg_database_size('data_lowlevel');
 \dt employees
 \unset ECHO_HIDDEN
 ```
-## Тестирование
+
+</details>
+
+<details><summary><h3>Тестирование</h3></summary>
+       
 ```
 pgbench -i dbname -- начальная инициализация
 
@@ -105,5 +125,5 @@ select * from pg_stat_all_indexes where relid = 'pgbench_accoubts'::regclass \gx
 select * from pg_statio_all_indexes where relid = 'pgbench_accoubts'::regclass \gx -- в страницах
 ```
 
-
+</details>
 
