--- a/001 Администрирование/010 Задачи администрирования/Мониторинг.md
+++ b/001 Администрирование/010 Задачи администрирования/Мониторинг.md
@@ -1,8 +1,10 @@
 [Презентация](https://www.youtube.com/watch?v=ZkjdLhENuso&list=PLaFqU3KCWw6LPcuYVymLcXl3muC45mu3e&index=13)
 [Материалы](https://edu.postgrespro.ru/dba1-13/dba1_12_admin_monitoring.html)
 [Документация](https://postgrespro.ru/docs/postgresql/13/monitoring-stats)
-### Общее
-<details><summary><h4>Общие замечания</h4></summary>
+
+## Обзор техники мониторинга
+
+<details><summary><h3>Общее</h3></summary>
     
   Сбором статистики занимается фоновый процесс stats collector. 
   Каждый обслуживающий процесс собирает необходимую статистикув рамках каждой выполняемой транзакции. 
@@ -24,15 +26,15 @@
  
 </details>
 
-### Мониторинг ОС
-<details><summary><h4>Утилиты</h4></summary>
+<details><summary><h3>Мониторинг ОС</h3></summary>
 
   iostat, vmstat, sar, top и др.
 
 </details>
 
-### Мониторинг PG
-<details><summary><h4>Статистика ввода-вывода</h4></summary>
+<details><summary><h3>Мониторинг PG</h3></summary>
+
+#### Статистика ввода-вывода
   
   ```
   ALTER SYSTEM SET track_io_timing=on;
