--- a/001 Администрирование/002 Структура данных/Базы данных и схемы.md
+++ b/001 Администрирование/002 Структура данных/Базы данных и схемы.md
@@ -1,5 +1,9 @@
 [Презентация](https://www.youtube.com/watch?v=UNdB2fvDdcw&list=PLaFqU3KCWw6LPcuYVymLcXl3muC45mu3e&index=9)
-## Базы данных
+
+## Структуры данных
+
+<details><summary><h3>Базы данных</h3></summary>
+
 #### template0
 Используется при восстановлении, когда нужен гарантированный бесконфликтный импорт объектов сторонней базы в новую. 
 Кроме того, создание базы с кодировкой, отличной от умолчания, возможно только с этой пустой базы.
@@ -11,7 +15,9 @@ template1 = model. Здесь можно создавать объекты. ко
 
 > При создании базы данных можно указать имя шаблона, с которого будут клонироваться все объекты.
 
-## Схемы
+</details>
+<details><summary><h3>Схемы</h3></summary>
+  
 Посмотреть схемы и таблички
 ```
 \dn
@@ -76,3 +82,4 @@ select * from pg_attribute where attrelid = 'employees'::regclass
 ```
 [Список regtypes](https://github.com/AV-ghub/PostgreSQL/blob/main/001%20%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5/010%20%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8%20%D0%B0%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F/%D0%9F%D0%BE%D0%BB%D0%B5%D0%B7%D0%BD%D1%8B%D0%B5%20%D1%81%D0%BA%D1%80%D0%B8%D0%BF%D1%82%D1%8B.md#%D1%81%D0%BF%D0%B8%D1%81%D0%BE%D0%BA-regtypes)
 
+</details>
