--- a/001 Администрирование/002 Структура данных/Табличные пространства.md
+++ b/001 Администрирование/002 Структура данных/Табличные пространства.md
@@ -1,6 +1,10 @@
 [Презентация](https://www.youtube.com/watch?v=uPfM74fKm9o&list=PLaFqU3KCWw6LPcuYVymLcXl3muC45mu3e&index=11)
 [Материалы](https://edu.postgrespro.ru/dba1-13/dba1_11_data_lowlevel.html)
-## Общее
+
+## Табличные пространства
+
+<details><summary><h3>Общее</h3></summary>
+  
 Табличные пространства - способ физической организации данных. Каталог, находящейся где-либо на файловой системе.
 #### Табличное пространство pg_global
 Общее пространство для всего кластера. Там находятся объекты системного каталога, видимые всем базам кластера.
@@ -74,7 +78,11 @@ ALTER DATABASE db SET TABLESPACE pg_default;
 -- По завершении удаляем пустое пользовательское пространство
 DROP TABLESPACE ts;
 ```
-## Низкоуровневое представление
+
+</details>
+
+<details><summary><h3>Низкоуровневое представление</h3></summary>
+  
 Каждый файл состоит из трех слоев (fork) - main (основный данные), init(заглушка, только для нежурналируемых таблиц) fsm (карта свободного пространства), vm (карта видимости).
 Каждый слой состоит из 1Гб сегментов. При достижении размера в 1ГБ файл (N) финализируется и создается следующий  и т.д. (N.1, N.2, ...N.N).
 > Размер сегмента можно поменять при компиляции.
@@ -122,7 +130,7 @@ select pg_relation_filepath('t_pkey');
 ALTER TABLE t ALTER COLUMN c SET STORAGE EXTERNAL;
 ```
 
-
+</details>
 
 
 
