--- a/001 Администрирование/010 Задачи администрирования/Мониторинг.md
+++ b/001 Администрирование/010 Задачи администрирования/Мониторинг.md
@@ -3,9 +3,7 @@
 [Документация](https://postgrespro.ru/docs/postgresql/13/monitoring-stats)
 
 ## Обзор техники мониторинга
-
 <details><summary><h3>Общее</h3></summary>
-    
   Сбором статистики занимается фоновый процесс stats collector. 
   Каждый обслуживающий процесс собирает необходимую статистикув рамках каждой выполняемой транзакции. 
   Затем эта статистика передается процессу-коллектору. 
@@ -25,16 +23,11 @@
   > С 15 версии процесса stats collector больше нет. Обслуживающие процессы пишут непосредственно в специально отведенный раздел памяти. При выключении также происходит дамп содержимого буфера на диск.
  
 </details>
-
 <details><summary><h3>Мониторинг ОС</h3></summary>
-
   iostat, vmstat, sar, top и др.
-
 </details>
-
 <details><summary><h3>Мониторинг PG</h3></summary>
-
-#### Статистика ввода-вывода
+<details><summary><h4>Статистика ввода-вывода</h4></summary>
   
   ```
   ALTER SYSTEM SET track_io_timing=on;
@@ -60,9 +53,40 @@
   pg_stat_xact -- статистика текущей транзакции
   
   select * from pg_stat_database -- глобальная статисктика по всей базе
-  
   ```
 
+</details>
+<details><summary><h4>Статистика пользовательских сеансовСтатистика пользовательских сеансов</h4></summary>
+    Появилась с 14 версии
+</details>
+<details><summary><h4>Статистика фоновой записи и контрольной точки</h4></summary>
+    
+```
+CHECKPOINT
+select * from pg_stat_bgwriter \gx -- кол-во срабатываний, время слива и т.п.
+```
+</details>
+<details><summary><h4>Текущие активностиТекущие активности</h4></summary>
+    
+```
+-- Картина активности (sp_WhoIsActive)
+SELECT pid, query, state, wait_event, wait_event_type, pg_blocking_pids(pid)
+FROM pg_stat_activity
+WHERE backend_type = 'client backend' \gx
+-- Заблокированные процессы
+SELECT pid AS blocked_pid
+FROM pg_stat_activity
+WHERE backend_type = 'client backend'
+AND cardinality(pg_blocking_pids(pid)) > 0;
+-- Блокировки
+SELECT locktype, transactionid, pid, mode, granted
+FROM pg_locks
+WHERE transactionid IN (
+  SELECT transactionid FROM pg_locks WHERE pid = 16746 AND NOT granted
+);
+```
+
+</details>
 </details>
 
 
