--- a/001 Администрирование/010 Задачи администрирования/Мониторинг.md
+++ b/001 Администрирование/010 Задачи администрирования/Мониторинг.md
@@ -66,7 +66,7 @@ CHECKPOINT
 select * from pg_stat_bgwriter \gx -- кол-во срабатываний, время слива и т.п.
 ```
 </details>
-<details><summary><h4>Текущие активностиТекущие активности</h4></summary>
+<details><summary><h4>Текущие активности</h4></summary>
     
 ```
 -- Картина активности (sp_WhoIsActive)
