--- a/001 Администрирование/010 Задачи администрирования/Мониторинг.md
+++ b/001 Администрирование/010 Задачи администрирования/Мониторинг.md
@@ -56,7 +56,7 @@
   ```
 
 </details>
-<details><summary><h4>Статистика пользовательских сеансовСтатистика пользовательских сеансов</h4></summary>
+<details><summary><h4>Статистика пользовательских сеансов</h4></summary>
     Появилась с 14 версии
 </details>
 <details><summary><h4>Статистика фоновой записи и контрольной точки</h4></summary>
