--- a/001 Администрирование/010 Задачи администрирования/Мониторинг.md
+++ b/001 Администрирование/010 Задачи администрирования/Мониторинг.md
@@ -4,6 +4,8 @@
 
 ## Обзор техники мониторинга
 <details><summary><h3>Общее</h3></summary>
+
+  #### Сбор статистики
   Сбором статистики занимается фоновый процесс stats collector. 
   Каждый обслуживающий процесс собирает необходимую статистикув рамках каждой выполняемой транзакции. 
   Затем эта статистика передается процессу-коллектору. 
@@ -21,7 +23,16 @@
   При нормальном выключении сервера (с контрольной точкой и дампом буфера на диск) статистика из временных файлов переносится в постоянное хранилище **PGDATA/pg_stat/**.
   
   > С 15 версии процесса stats collector больше нет. Обслуживающие процессы пишут непосредственно в специально отведенный раздел памяти. При выключении также происходит дамп содержимого буфера на диск.
- 
+
+#### Запись активности в журал
+Информацию о текущей активности можно писать в журнал. При этом можно настроить множество параметров:
+* куда записывать
+* что записывать
+* как ротировать файлы журнала
+#### Анализ журнала
+Стандартные средства - grep, awk...
+Специальные - pg_Badger...
+
 </details>
 <details><summary><h3>Мониторинг ОС</h3></summary>
   iostat, vmstat, sar, top и др.
@@ -86,7 +97,72 @@ FROM pg_locks
 WHERE transactionid IN (
   SELECT transactionid FROM pg_locks WHERE pid = 16746 AND NOT granted
 );
+
+-- Прерывание заблокированных процессов. Нельзя завершать процессы через ОС - postmster может среагировать перезагрузкой сервиса.
+SELECT pg_terminate_backend(b.pid)
+FROM unnest(pg_blocking_pids(16746)) AS b(pid);
+
+-- Определение PID postmaster
+sudo head -n 1 /var/lib/postgresql/13/main/postmaster.pid
+-- Процессы postmaster (обслуживающие процессы)
+sudo ps -o pid,command --ppid 10032
+
+-- Обслуживающие процессы в psql
+SELECT pid, query, state, wait_event, wait_event_type
+FROM pg_stat_activity
+WHERE backend_type = 'client backend' \gx
 ```
+</details>
+<details><summary><h4>Мониторинг длительных активностей</h4></summary>
+
+[Отслеживание выполнения](https://postgrespro.ru/docs/postgresql/13/progress-reporting)
+
+```
+pg_stat_progress_analyze -- ANALYZE
+pg_stat_progress_create_index -- CREATE INDEX, REINDEX
+pg_stat_progress_vacuum -- VACUUM включая процессы автоочистки
+pg_stat_progress_cluster -- CLUSTER, VACUUM FULL
+pg_stat_progress_basebackup -- Создание базовой резервной копии
+```
+
+</details>
+<details><summary><h4>Расширения для мониторинга активностей</h4></summary>
+
+```
+-- Расширения в поставке
+pg_stat_statements -- статистика по запросам
+pgstattuple -- статистика по версиям строк
+pg_buffercache -- состояние буферного кеша
+
+-- Другие расширения
+pg_wait_sampling -- статистика ожиданий
+pg_stat_kcache -- статистика по процессору и вводу-выводу
+pg_qualstats -- статистика по предикатам
+```
+
+##### Устновка pg_stat_statements
+
+```
+ALTER SYSTEM SET shared_preload_libraries = 'pg_stat_statements';
+sudo pg_ctlcluster 13 main restart
+SHOW shared_preload_libraries;
+CREATE EXTENSION pg_stat_statements;
+...
+SELECT * FROM pg_stat_statements ORDER BY calls DESC LIMIT 1 \gx
+```
+
+</details>  
+<details><summary><h4>Системы мониторинга</h4></summary>
+
+  ##### Универсальные системы мониторинга
+  * Zabbix, Munin, Cacti...
+  * в облаке: Okmeter, NewRelic, Datadog...
+  
+  ##### Системы мониторинга PostgreSQL
+  * PGObserver
+  * PostgreSQL Workload Analyzer (PoWA)
+  * Open PostgreSQL Monitoring (OPM)
+  * pg_profile, pgpro_pwr
 
 </details>
 </details>
