Update Роли и атрибуты.md

--- a/001 Администрирование/003 Безопасность и управление доступом/Роли и атрибуты.md
+++ b/001 Администрирование/003 Безопасность и управление доступом/Роли и атрибуты.md
@@ -1,1 +1,137 @@
+[Презентация](https://www.youtube.com/watch?v=Z2q-H_tcmgU&list=PLaFqU3KCWw6LPcuYVymLcXl3muC45mu3e&index=14)
+[Материалы](https://edu.postgrespro.ru/dba1-13/dba1_13_access_roles.html)  
+##### Документация:
+[Роли](https://postgrespro.ru/docs/postgresql/13/database-roles)
+[Атрибуты](https://postgrespro.ru/docs/postgresql/13/role-attributes)
+[Создание роли](https://postgrespro.ru/docs/postgresql/13/sql-createrole)
+
+## Роли и атрибуты
+
+<details><summary><h3>Роли</h3></summary>
+<details><summary><h4>Общее</h4></summary>
+Роль и пользователь это одно и то же. Ранее, по аналогии с nix было разграничение на группы и роли, потом все свелось к роли.
+Никак не связалны с пользователями ОС, хотя могут называться одинаково.
+Роль - это глобальный объект на уровне кластера, с ней можно подключаться к любой базе при соотв настройках доступа.
+
+Посмотреть роли, имеющиеся в кластере, можно так:
+```
+alice=> \du
+                                   List of roles
+ Role name |                         Attributes                         | Member of 
+-----------+------------------------------------------------------------+-----------
+ alice     | Create role                                                | {}
+ bob       |                                                            | {}
+ postgres  | Superuser, Create role, Create DB, Replication, Bypass RLS | {}
+ student   | Superuser, Create role, Create DB, Replication, Bypass RLS | {}
+ ```
+
+Для суперпользователя подсказка меняется на #, для обычного пользователя =>.
+</details>
+<details><summary><h4>Групповые роли</h4></summary>
+Можно выделить отдельные роли с наборами прав и выдавать их другим ролям.
+Такие роли называются групповыми.  
+
+##### Операции с ролями
+
+```
+-- Изменение роли
+alice=> ALTER ROLE bob NOLOGIN; 
+alice=> ALTER ROLE alice NOCREATEROLE;
+
+-- Включение роли в группу / исключение
+student=> GRANT dba TO alice;
+student=> REVOKE dba FROM alice;
+
+-- Задание индивидуальной конфигурации для конкретной роли
+postgres=# ALTER ROLE alice SET log_min_duration_statement=0;
+postgres=# ALTER ROLE alice RESET log_min_duration_statement;
+postgres=# ALTER ROLE alice IN DATABASE access_roles SET log_min_duration_statement=0;
+
+-- Работа из-под другого пользователя (при наличии равных или больших прав)
+alice=> SET ROLE student; -- напоминает команду su в ОС Unix
+
+-- Определение текущего статуса
+alice=> SELECT session_user, -- кем подключились
+               current_user; -- под кем работаем в настоящий момент
+ session_user | current_user 
+--------------+--------------
+ alice        | student
+
+-- Возврат в исходное состояние
+alice=> RESET ROLE;
+alice=> SELECT session_user, current_user;
+ session_user | current_user 
+--------------+--------------
+ alice        | alice
+
+-- Просмотр журнала сообщений
+student$ tail -n 5 /var/log/postgresql/postgresql-13-main.log
+```
+
+</details>
+</details>
+<details><summary><h3>Атрибуты</h3></summary>
+Роль может создаваться с одним или несколькими атрибутами.
+
+Атрибуты определяют свойства роли
+```
+CREATE ROLE роль [WITH] атрибут [атрибут ...]
+```
+* LOGIN возможность подключения
+* SUPERUSER суперпользователь
+* CREATEDB возможность создавать базы данных
+* CREATEROLE возможность создавать роли
+* REPLICATION использование протокола репликациии
+* другие
+
+</details>
+<details><summary><h3>Владельцы объектов</h3></summary>
+По умолчанию владельцем является тот кто создал объект. Наследуется всеми, кто включен в роль владельца.
+Может быть изменен командой 
+
+```
+ALTER ... OWNER TO роль
+
+-- Посмотреть владельца
+\dt
+```
+
+##### Операции с владельцами
+
+> Нельзя удалить роль, если она владеет каки-либо объектами
+
+```
+student=# DROP ROLE alice;
+ERROR:  role "alice" cannot be dropped because some objects depend on it
+DETAIL:  owner of table test
+```
+Чтобы удалить роль, можно передать ее объекты другой роли:
+```
+student=# REASSIGN OWNED BY alice TO bob;
+```
+Другой вариант — удалить объекты, принадлежащие роли:
+```
+student=# DROP OWNED BY bob;
+```
+
+> Надо иметь в виду, что роль может владеть объектами в разных базах данных.
+ 
+</details>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
