Update Роли и атрибуты.md

--- a/001 Администрирование/003 Безопасность и управление доступом/Роли и атрибуты.md
+++ b/001 Администрирование/003 Безопасность и управление доступом/Роли и атрибуты.md
@@ -115,6 +115,14 @@ student=# DROP OWNED BY bob;
 ```
 
 > Надо иметь в виду, что роль может владеть объектами в разных базах данных.
+
+[Найти все объекты схемы](https://stackoverflow.com/questions/55269419/how-do-i-find-all-the-databases-and-related-schemas-on-a-postgres-cluster)
+```
+SELECT distinct table_catalog, table_schema
+FROM information_schema.tables
+ORDER BY table_schema; --This lists all the schemas in the current database I am in.
+```
+> Databases are (logically) strictly separated in PostgreSQL; you cannot get information about objects in one database (e.g. schemas) with queries in another database. You'll have to connect to all databases in turn and query each for its schemas.
  
 </details>
 
