Update Роли и атрибуты.md

--- a/001 Администрирование/003 Безопасность и управление доступом/Роли и атрибуты.md
+++ b/001 Администрирование/003 Безопасность и управление доступом/Роли и атрибуты.md
@@ -123,6 +123,8 @@ FROM information_schema.tables
 ORDER BY table_schema; --This lists all the schemas in the current database I am in.
 ```
 > Databases are (logically) strictly separated in PostgreSQL; you cannot get information about objects in one database (e.g. schemas) with queries in another database. You'll have to connect to all databases in turn and query each for its schemas.
+
+> Только схемы принадлежат одной базе данных. Табличные пространства и роли могут иметь объекты в разных базах данных кластера. Поэтому объекты последних надо искать, переключаясь последовательно по всем базам.
  
 </details>
 
