--- a/001 Администрирование/002 Структура данных/Базы данных и схемы.md
+++ b/001 Администрирование/002 Структура данных/Базы данных и схемы.md
@@ -53,6 +53,9 @@ create temp table t...
 Время жизни можно установить до конца сеанса или до конца транзакции.
 ### Удаление
 Можно удалить сразу со всеми включенными объектами (опция CASCADE).
+
+> Только схемы принадлежат одной базе данных. Табличные пространства и роли могут иметь объекты в разных базах данных кластера. Поэтому объекты последних надо искать, переключаясь последовательно по всем базам.
+ 
 ### Системный каталог
 **pg_catalog** или **information_schema** (стандарт SQL). Внутри psql соотв **\d**.
 pg_catalog располагается внутри каждой базы данных и содержит описание ее объектов.
