--- a/001 Администрирование/002 Структура данных/Табличные пространства.md
+++ b/001 Администрирование/002 Структура данных/Табличные пространства.md
@@ -62,6 +62,9 @@ ALTER TABLE ALL IN TABLESPACE ts_1 SET TABLSPACE ts_2;
 ```
 #### Удаление табличного пространства
 Удалить каскадом, в отличие от схемы, нельзя. Там могут объекты разных баз.
+
+> Только схемы принадлежат одной базе данных. Табличные пространства и роли могут иметь объекты в разных базах данных кластера. Поэтому объекты последних надо искать, переключаясь последовательно по всем базам.
+ 
 ```
 -- Идентификатор пространства
 select oid from pg_tablespace where spcname = 'ts';
