Update Роли и атрибуты.md

--- a/001 Администрирование/003 Безопасность и управление доступом/Роли и атрибуты.md
+++ b/001 Администрирование/003 Безопасность и управление доступом/Роли и атрибуты.md
@@ -86,7 +86,7 @@ CREATE ROLE роль [WITH] атрибут [атрибут ...]
 
 </details>
 <details><summary><h3>Владельцы объектов</h3></summary>
-По умолчанию владельцем является тот кто создал объект. Наследуется всеми, кто включен в роль владельца.
+По умолчанию владельцем является тот кто создал объект. Наследуется всеми, кто включен в роль владельца. Т.е. все роли, включенные в роль владельца, также являются владельцами всех объектов роли владельца.
 Может быть изменен командой 
 
 ```
