Update Роли и атрибуты.md

--- a/001 Администрирование/003 Безопасность и управление доступом/Роли и атрибуты.md
+++ b/001 Администрирование/003 Безопасность и управление доступом/Роли и атрибуты.md
@@ -68,6 +68,17 @@ alice=> SELECT session_user, current_user;
 student$ tail -n 5 /var/log/postgresql/postgresql-13-main.log
 ```
 
+##### Работа под другой ролью
+Мы можем раздать узкие права на специфические роли и наполнять функциональность роли групповыми ролями с узкими полномочиями:
+```
+student=# CREATE ROLE creator WITH CREATEDB CREATEROLE;
+student=# CREATE ROLE weak WITH LOGIN;
+student=# GRANT creator TO weak;
+
+weak=> SET ROLE creator;
+weak=> CREATE DATABASE access_roles;
+```
+
 </details>
 </details>
 <details><summary><h3>Атрибуты</h3></summary>
