--- a/001 Администрирование/003 Безопасность и управление доступом/Привилегии.md
+++ b/001 Администрирование/003 Безопасность и управление доступом/Привилегии.md
@@ -1,1 +1,8 @@
+[Презентация](https://www.youtube.com/watch?v=WnEfg79FMKY&list=PLaFqU3KCWw6LPcuYVymLcXl3muC45mu3e&index=15)
+[Материалы](https://edu.postgrespro.ru/dba1-13/dba1_14_access_privileges.html)
+[1](https://postgrespro.ru/docs/postgresql/13/ddl-priv)
+[2](https://postgrespro.ru/docs/postgresql/13/sql-grant)
+[]()
+
+## Привилегии
 
