--- a/001 Администрирование/003 Безопасность и управление доступом/Привилегии.md
+++ b/001 Администрирование/003 Безопасность и управление доступом/Привилегии.md
@@ -6,3 +6,13 @@
 
 ## Привилегии
 
+Владелец может отобрать у себя право на использование объекта и вернуть его себе обратно.
+Привилегии (их всего две) выдаются набором через запятую
+```
+student=# GRANT CREATE, USAGE ON SCHEMA alice TO alice;
+```
+
+Право на схему не дает прав на объекты схемы (таблицы).
+Кроме прав на саму таблицу можно давать права на колонки.
+
+> Для раздачи прав выделяют роль и назначают права ей. Остальным ролям назначают эту роль(роли).
