--- a/001 Администрирование/003 Безопасность и управление доступом/Привилегии.md
+++ b/001 Администрирование/003 Безопасность и управление доступом/Привилегии.md
@@ -15,4 +15,40 @@ student=# GRANT CREATE, USAGE ON SCHEMA alice TO alice;
 Право на схему не дает прав на объекты схемы (таблицы).
 Кроме прав на саму таблицу можно давать права на колонки.
 
-> Для раздачи прав выделяют роль и назначают права ей. Остальным ролям назначают эту роль(роли).
+> Роль может получать привилегии для доступа к объекту не только непосредственно, но и от групповых ролей, в которые она входит. 
+Можно выдать групповой роли необходимый набор привилегий и затем выдавать пользователям весь этот набор целиком.
+ 
+Групповую роль можно рассматривать как особую привилегию; поэтому управление группами и выполняется теми же командами **GRANT и REVOKE**, что и управление привилегиями.
+
+Роль с атрибутом **INHERIT** (по умолчанию) автоматически обладает привилегиями всех групп, в которые она входит. Это касается и псевдороли **public**, в которую неявно входят все роли.  
+Если же роль создана как **NOINHERIT**, то она может воспользоваться привилегиями группы, только выполнив команду **SET ROLE** и таким образом переключившись на эту групповую роль.  
+Все действия, совершаемые ролью, будут совершаться от имени групповой роли (например, групповая роль будет владельцем созданных объектов).
+
+[Членство в роли](https://postgrespro.ru/docs/postgresql/13/role-membership)
+
+> Нюанс. Раздача прав на update не дает возможности сделать обновление данных. Для этого обязательно необходимо право на select.
+
+##### Роль public
+Псевдороль, под которой ничего нельзя сделать.  
+Но, выдавая права и привилегии этой роли, мы автоматически даем эти права всем ролям, т.к. все роли неявно наследуют эту роль.  
+Включить и исключить кого-либо из этой роли тоже нельзя.
+
+##### Преднастроенные роли
+При инициализации сервера в нем создается специальный набор преднастроенных ролей для выполнения задач, которые обычно может совершать только суперпользователь.  
+[Предопределённые роли](https://postgrespro.ru/docs/postgresql/13/default-roles)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
