--- a/001 Администрирование/003 Безопасность и управление доступом/Привилегии.md
+++ b/001 Администрирование/003 Безопасность и управление доступом/Привилегии.md
@@ -12,7 +12,8 @@
 student=# GRANT CREATE, USAGE ON SCHEMA alice TO alice;
 ```
 
-Право на схему не дает прав на объекты схемы (таблицы).
+> Право на схему не дает прав на объекты схемы (таблицы).
+
 Кроме прав на саму таблицу можно давать права на колонки.
 
 > Роль может получать привилегии для доступа к объекту не только непосредственно, но и от групповых ролей, в которые она входит. 
@@ -26,7 +27,7 @@ student=# GRANT CREATE, USAGE ON SCHEMA alice TO alice;
 
 [Членство в роли](https://postgrespro.ru/docs/postgresql/13/role-membership)
 
-> Нюанс. Раздача прав на update не дает возможности сделать обновление данных. Для этого обязательно необходимо право на select.
+> Раздача прав на update не дает возможности сделать обновление данных. Для этого обязательно необходимо право на select.
 
 ##### Роль public
 Псевдороль, под которой ничего нельзя сделать.  
