--- a/001 Администрирование/003 Безопасность и управление доступом/Привилегии.md
+++ b/001 Администрирование/003 Безопасность и управление доступом/Привилегии.md
@@ -38,18 +38,58 @@ student=# GRANT CREATE, USAGE ON SCHEMA alice TO alice;
 При инициализации сервера в нем создается специальный набор преднастроенных ролей для выполнения задач, которые обычно может совершать только суперпользователь.  
 [Предопределённые роли](https://postgrespro.ru/docs/postgresql/13/default-roles)
 
+##### Выдача привилегий
+Можно не только выдавать права, но и указывать опцию на перевыдачу этого права далее по цепочке.  
+Также можно и отбирать права с каскадной опцией. При этом права отнимутся и у того, кому выдавали, так и у тех кому он выдавал на основании этого права.  
 
+> Особый случай с ролью public. В ней по умолчанию **права на соединение с базой** и **права на создание временных объектов**. Если нам не нужно такое поведение, то можно у public эти права отобрать, и выдаваь их делее контролируемо.
 
+По умолчанию псевдороль public получает ряд привилегий (то есть, фактически, их получают все роли):
+- подключение и создание временных таблиц для всех баз данных;
+- использование схемы public и создание в ней объектов;
+- использование схем pg_catalog и information_schema;
+- выполнение всех функций и процедур.
 
+>  (В PostgreSQL 15 роль public лишится права создания объектов.)
 
+При создании **функции** все пользователи (наследуясь от public) получают **право на ее выполнение**. Но при этом функция выполняется от имени вызывающего. Соотв если внутри нее есть обращение к объектам, на которые у вызывающей роли нет прав, то выполнение закончится ошибкой.  
+Можно изначально создать функцию с опцией запуска от имени владельца.
 
+В целях безопасности лучше запретить право выполнения для роли public следующим образом
+```
+alice=> REVOKE EXECUTE ON ALL FUNCTIONS IN SCHEMA alice FROM public;
+```
 
+и выдавать уже конкретным пользователям.
 
+##### Привилегии по умолчанию
+Можно настроить дополнительные привилегии, выдаваемые или отзываемые при создании объекта.  
+Для этого используется команда **ALTER DEFAULT PRIVILEGES**
 
+[ALTER DEFAULT PRIVILEGES](https://postgrespro.ru/docs/postgresql/13/sql-alterdefaultprivileges)
 
+Посмотреть текущие права по умолчанию
+```
+\ddp
+```
 
+Функции information_schema для проверки привилегий
+```
+=> SELECT grantee, grantor, privilege_type, is_grantable
+FROM information_schema.table_privileges
+WHERE table_name = 'test';
 
+ grantee | grantor | privilege_type | is_grantable 
+---------+---------+----------------+--------------
+ student | student | INSERT         | YES
+ student | student | SELECT         | YES
 
-
+=> SELECT has_table_privilege('alice', 'test', 'SELECT') AS has_select,
+          has_table_privilege('alice', 'test', 'UPDATE') AS has_update,
+          has_table_privilege('alice', 'test', 'DELETE') AS has_delete;
+ has_select | has_update | has_delete 
+------------+------------+------------
+ t          | t          | f
+```
 
 
