Update Подключение к базе данных.md

--- a/001 Администрирование/003 Безопасность и управление доступом/Подключение к базе данных.md
+++ b/001 Администрирование/003 Безопасность и управление доступом/Подключение к базе данных.md
@@ -1,2 +1,18 @@
+[Презентация](https://youtube.com/watch?v=DivOo5ajOy8&list=PLaFqU3KCWw6LPcuYVymLcXl3muC45mu3e&index=17)
+[Материалы](https://edu.postgrespro.ru/dba1-13/dba1_16_access_authentication.html)
+[Документация](https://postgrespro.ru/docs/postgresql/13/auth-pg-hba-conf)
+
 ## Подключение
 По умолчанию подключение через psql осуществляется от имени текущего пользователя ОС к одноименной базе.
+
+Настройки аутентификации хранятся в конфигурационном файле, который используется подобно **postgresql.conf**, но отличается от него по формату.  
+Файл называется **pg_hba.conf** (от «host-based authentication»), его расположение определяется параметром **hba_file**.  
+```
+=> SHOW hba_file;
+              hba_file               
+-------------------------------------
+ /etc/postgresql/13/main/pg_hba.conf
+```  
+[Структура каталогов Linux](https://github.com/AV-ghub/Linux/blob/main/001%20%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%B0%20%D0%B8%20%D1%83%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0/001%20%D0%A1%D1%82%D1%80%D1%83%D0%BA%D1%82%D1%83%D1%80%D0%B0%20%D0%BA%D0%B0%D1%82%D0%B0%D0%BB%D0%BE%D0%B3%D0%BE%D0%B2%20Linux.md#%D0%BE%D1%81%D0%BD%D0%BE%D0%B2%D0%BD%D1%8B%D0%B5-%D0%BA%D0%B0%D1%82%D0%B0%D0%BB%D0%BE%D0%B3%D0%B8)  
+
+При изменении этого файла необходимо перечитать настройки (как обычно, с помощью **pg_ctl reload** или вызовом функции **pg_reload_conf**).  
