--- a/001 Администрирование/003 Безопасность и управление доступом/Подключение к базе данных.md
+++ b/001 Администрирование/003 Безопасность и управление доступом/Подключение к базе данных.md
@@ -16,3 +16,47 @@
 [Структура каталогов Linux](https://github.com/AV-ghub/Linux/blob/main/001%20%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%B0%20%D0%B8%20%D1%83%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0/001%20%D0%A1%D1%82%D1%80%D1%83%D0%BA%D1%82%D1%83%D1%80%D0%B0%20%D0%BA%D0%B0%D1%82%D0%B0%D0%BB%D0%BE%D0%B3%D0%BE%D0%B2%20Linux.md#%D0%BE%D1%81%D0%BD%D0%BE%D0%B2%D0%BD%D1%8B%D0%B5-%D0%BA%D0%B0%D1%82%D0%B0%D0%BB%D0%BE%D0%B3%D0%B8)  
 
 При изменении этого файла необходимо перечитать настройки (как обычно, с помощью **pg_ctl reload** или вызовом функции **pg_reload_conf**).  
+
+Мы можем посмотреть сам файл (опустим пустые строки и комментарии):  
+```
+student$ sudo egrep '^[^#]' /etc/postgresql/13/main/pg_hba.conf
+```  
+Другой способ получить содержимое pg_hba.conf — представление **pg_hba_file_rules**:
+```
+=> SELECT line_number, type, database, user_name, address, auth_method FROM pg_hba_file_rules;
+
+ line_number | type  |   database    | user_name  |  address  | auth_method 
+-------------+-------+---------------+------------+-----------+-------------
+          89 | local | {all}         | {postgres} |           | trust
+          94 | local | {all}         | {all}      |           | trust
+          96 | host  | {all}         | {all}      | 127.0.0.1 | md5
+          98 | host  | {all}         | {all}      | ::1       | md5
+         101 | local | {replication} | {all}      |           | trust
+         102 | host  | {replication} | {all}      | 127.0.0.1 | md5
+         103 | host  | {replication} | {all}      | ::1       | md5
+```
+Поиск ошибочных вхождений  
+```
+=> SELECT line_number, error FROM pg_hba_file_rules WHERE error IS NOT NULL;
+
+ line_number |                 error                 
+-------------+---------------------------------------
+         104 | invalid authentication method "trast"
+```  
+> Сопоставление пользователей на основе регулярных выражений осуществляется через **pg_ident.conf**  
+> При необходимости дать доступ **меняющейся группе** пользователей правильнее дать права **групповой роли** и далее менять по необходимости ее состав.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
