Update 002 Полезные скрипты.md

--- a/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/002 Полезные скрипты.md
@@ -126,4 +126,12 @@ select * from pg_statio_all_indexes where relid = 'pgbench_accoubts'::regclass \
 ```
 
 </details>
+<details><summary><h3>Оптимизация</h3></summary>
+
+Отключение параллельного плана
+```       
+=> SET max_parallel_workers_per_gather = 0;
+```
+       
+</details>
 
