Update 001 Приемы оптимизации.md

--- a/004 Оптимизация/001 Приемы оптимизации.md
+++ b/004 Оптимизация/001 Приемы оптимизации.md
@@ -1,1 +1,30 @@
+[Презентация](https://www.youtube.com/watch?v=AsaGNjJtrR4&list=PLaFqU3KCWw6JW80WBHPOe-SMJD2NOjmge&index=13)
+[Материалы](https://edu.postgrespro.ru/qpt-13/qpt_11_technics.html)
 
+
+## Приемы оптимизации
+<details><summary><h3>Подходы к оптимизации</h3></summary>
+  Цель оптимизации запроса — получить адекватный план выполнения.  
+  
+  #### Пути оптимизации
+  ##### Вмешательство в план выполнения
+  Если идти таким путем, то хочется иметь возможность целиком или частично отключить планировщик и самому создать план выполнения.  
+  Такая возможность называется ***подсказками (хинтами)*** и в явном виде отсутствует в PostgreSQL.
+  ##### Статистика
+  Другой подход состоит в том, чтобы добиться корректного расчета кардинальности в каждом узле плана.  
+  Для этого статистика должна регулярно (оптимально часто) обновляться.  
+  Признаком неактуальной (неточной) статистики будет серьезное несоответствие ожидаемого и реального числа строк в листовых узлах плана.
+
+  Для увеличения точности может потребоваться изменить значение **default_statistics_target** (глобально или для отдельных столбцов таблиц).  
+  Иногда может оказаться полезным **индекс по выражению**, ***обладающий собственной статистикой***.  
+  В отдельных случаях можно использовать **расширенную статистику**.  
+  
+  Наличие точной актуальной статистики необходимо, но не достаточно для построения хорошего плана.  
+  Планировщик может не суметь сделать правильные выводы из имеющейся статистики; часто ошибки связаны с ***неверным расчетом селективности соединений или агрегаций***.
+
+  
+  ##### Настройка глобальных конфигурационных параметров
+  Обычно имеет смысл применять оба способа (статистика и глобальные параметры), смотря по ситуации и сообразуясь со здравым смыслом.
+
+  
+</details>
