Update 001 Приемы оптимизации.md

--- a/004 Оптимизация/001 Приемы оптимизации.md
+++ b/004 Оптимизация/001 Приемы оптимизации.md
@@ -21,10 +21,27 @@
   
   Наличие точной актуальной статистики необходимо, но не достаточно для построения хорошего плана.  
   Планировщик может не суметь сделать правильные выводы из имеющейся статистики; часто ошибки связаны с ***неверным расчетом селективности соединений или агрегаций***.
-
-  
   ##### Настройка глобальных конфигурационных параметров
   Обычно имеет смысл применять оба способа (статистика и глобальные параметры), смотря по ситуации и сообразуясь со здравым смыслом.
+
+  #### Настройки стоимости
+  
+  > Ввод-вывод можно (и нужно) указывать на уровне табличных пространств
+  > * seq_page_cost = 1.0
+  > * random_page_cost = 4.0 <-- для SSD следует уменьшить
+  > * effective_io_concurrency = 1
+
+  Имеется большое число настроек, которые позволяют задать стоимости элементарных операций, из которых в итоге складывается стоимость плана запроса.  
+  Такие настройки имеет смысл изменять, если запрос, в котором планировщик точно спрогнозировал кардинальности, тем не менее выполняется не самым эффективным образом.
+
+  С вводом-выводом связаны настройки, задающие веса для «условных единиц», в которых выражается стоимость.  
+  Это параметры **seq_page_cost** и **random_page_cost**, определяющие стоимость чтения одной страницы при последовательном доступе и при произвольном доступе.  
+  Значение seq_page_cost равно единице и его не стоит изменять.  
+  Высокое значение параметра random_page_cost отражает реалии HDD-дисков. Для ***SSD-дисков*** (а также в случаях, когда все данные с большой вероятностью ***будут закешированы***), значение этого параметра необходимо значительно уменьшать, например, до 1.1.  
+  Параметр **effective_io_concurrency** можно ***увеличить до числа независимых дисков в дисковом массиве***.  
+  Фактически этот параметр влияет только на количество страниц, которые будут предварительно считаны в кеш при сканировании по битовой карте.
+  
+  https://postgrespro.ru/docs/postgresql/13/runtime-config-query
 
   
 </details>
