Update 001 Приемы оптимизации.md

--- a/004 Оптимизация/001 Приемы оптимизации.md
+++ b/004 Оптимизация/001 Приемы оптимизации.md
@@ -43,5 +43,12 @@
   
   https://postgrespro.ru/docs/postgresql/13/runtime-config-query
 
+  #### Конфигурация методов планировщика
+  Улучшить качество планов, выбираемых планировщиком, можно:
+  * скорректировав **константы стоимости** (см. выше)
+  * выполнив **ANALYZE** вручную
+  * изменив значение параметра конфигурации **default_statistics_target**
+  * увеличив объём статистики, собираемой для отдельных столбцов, воспользовавшись командой **ALTER TABLE SET STATISTICS**.
+
   
 </details>
