--- a/004 Оптимизация/Статистика и планирование запросов/001 Статистика, используемая планировщиком.md
+++ b/004 Оптимизация/Статистика и планирование запросов/001 Статистика, используемая планировщиком.md
@@ -30,3 +30,104 @@ WHERE relname LIKE 'tenk1%';
 Кроме того, представление **pg_stats** доступно для чтения всем, тогда как pg_statistic — только суперпользователям.  
 (Это сделано для того, чтобы непривилегированные пользователи не могли ничего узнать о содержимом таблиц других людей из статистики.  
 Представление pg_stats устроено так, что оно показывает строки только для тех таблиц, которые может читать данный пользователь.)
+
+Объём информации, сохраняемой в pg_statistic командой ANALYZE, в частности максимальное число записей в массивах most_common_vals (самые популярные значения) и histogram_bounds (границы гистограмм) для каждого столбца, можно ограничить на уровне столбцов с помощью команды ALTER TABLE SET STATISTICS или глобально, установив параметр конфигурации **default_statistics_target**. В настоящее время ограничение по умолчанию равно ***100 записям***. Увеличивая этот предел, можно ***увеличить*** точность оценок планировщика, особенно для ***столбцов с нерегулярным распределением*** данных, ценой большего объёма pg_statistic и, возможно, увеличения времени расчёта этой статистики. И напротив, для ***столбцов с простым распределением*** данных может быть достаточно ***меньшего*** предела.
+
+## Расширенная статистика
+Статистика, которая по природе своей строится по отдельным столбцам, не может выявить ***корреляции между столбцами***. Однако PostgreSQL имеет возможность вычислять ***многовариантную статистику***, которая может собирать необходимую для этого информацию.  
+Можно создать объекты **расширенной статистики**, чаще называемые просто объектами статистики, чтобы сервер собирал статистику по ***некоторым наборам столбцов***, представляющим интерес.  
+Объекты статистики создаются командой **CREATE STATISTICS**. При создании такого объекта просто добавляется запись в каталоге, выражающая востребованность этой статистики.  
+Собственно ***сбор данных выполняется процедурой ANALYZE*** (запускаемой вручную или автоматически в фоновом процессе). Изучить собранные значения можно в каталоге pg_statistic_ext_data.
+
+### Функциональные зависимости
+Существование функциональных зависимостей напрямую влияет на точность оценок в определённых запросах. Если запрос содержит условия как по независимым, так и по зависимым столбцам, _условия по зависимым столбцам дополнительно не сокращают размер результата_. Однако без знания о функциональной зависимости планировщик запросов будет полагать, что все условия независимы, и недооценит размер результата.
+
+Для информирования планировщика о функциональных зависимостях команда ANALYZE может собирать показатели зависимостей между столбцами. Оценить степень зависимости между всеми наборами столбцов обошлось бы непозволительно дорого, поэтому сбор данных ограничивается только теми группами столбцов, которые фигурируют вместе в объекте статистики, определённом со свойством **dependencies**.
+
+```
+CREATE STATISTICS stts (dependencies) ON city, zip FROM zipcodes;
+
+ANALYZE zipcodes;
+
+SELECT stxname, stxkeys, stxddependencies
+  FROM pg_statistic_ext join pg_statistic_ext_data on (oid = stxoid)
+  WHERE stxname = 'stts';
+ stxname | stxkeys |             stxddependencies             
+---------+---------+------------------------------------------
+ stts    | 1 5     | {"1 => 5": 1.000000, "5 => 1": 0.423130}
+```
+
+В показанном случае столбец 1 (код zip) полностью определяет столбец 5 (city), так что коэффициент равен 1.0, тогда как город (столбец city) определяет код ZIP только в 42% всех случаев, что означает, что многие города (58%) представлены несколькими кодами ZIP.
+
+#### Ограничения функциональных зависимостей
+Планировщик предполагает, что условия по задействованным столбцам совместимы и таким образом избыточны.  
+Т.е. если передаются два параметра по зависимым столбцам, планировщик полагает, что значению столбца а есть соотвествие переденного в запросе значения столбца б.  
+Если условия несовместимы, правильной оценкой должен быть ноль строк, но эта возможность не рассматривается (оценка делается такая же как и для случая совместимости). 
+
+Во многих практических ситуациях это предположение обычно удовлетворяется; например, графический интерфейс приложения для последующего формирования запроса может не допускать выбор несовместимого сочетания города и кода ZIP. Но когда это не так, статистика функциональной зависимости может не подойти.
+#### Многовариантное число различных значений
+Статистика по одному столбцу содержит число различных значений в каждом отдельном столбце.  
+Оценки ***числа различных значений в сочетании*** нескольких столбцов (например, в ***GROUP BY a, b***) часто оказываются ошибочными, когда планировщик имеет статистические данные только по отдельным столбцам, что приводит к выбору плохих планов.
+
+```
+CREATE STATISTICS stts2 (ndistinct) ON city, state, zip FROM zipcodes;
+
+ANALYZE zipcodes;
+
+SELECT stxkeys AS k, stxdndistinct AS nd
+  FROM pg_statistic_ext join pg_statistic_ext_data on (oid = stxoid)
+  WHERE stxname = 'stts2';
+-[ RECORD 1 ]------------------------------------------------------​--
+k  | 1 2 5
+nd | {"1, 2": 33178, "1, 5": 33178, "2, 5": 27435, "1, 2, 5": 33178}
+```
+
+Объект статистики **ndistinct** рекомендуется создавать только ***для тех сочетаний столбцов, которые действительно используются при группировке***, и только когда неправильная оценка числа групп может привести к выбору плохих планов. В противном случае усилия, потраченные на выполнение ANALYZE, будут напрасными.
+
+#### Многовариантные списки MCV
+Ещё один тип статистики, сохраняемой для каждого столбца, представляют **списки частых значений**. Такие списки позволяют получать очень точную оценку для отдельных столбцов, но для запросов, содержащих условия с несколькими столбцами, полученная по ним оценка может быть значительно искажена.
+
+Для улучшения таких оценок операция ANALYZE может собирать списки MCV по комбинациям столбцов.  
+
+```
+CREATE STATISTICS stts3 (mcv) ON city, state FROM zipcodes;
+
+ANALYZE zipcodes;
+
+SELECT m.* FROM pg_statistic_ext join pg_statistic_ext_data on (oid = stxoid),
+                pg_mcv_list_items(stxdmcv) m WHERE stxname = 'stts3';
+
+ index |         values         | nulls | frequency | base_frequency 
+-------+------------------------+-------+-----------+----------------
+     0 | {Washington, DC}       | {f,f} |  0.003467 |        2.7e-05
+     1 | {Apo, AE}              | {f,f} |  0.003067 |        1.9e-05
+     2 | {Houston, TX}          | {f,f} |  0.002167 |       0.000133
+     3 | {El Paso, TX}          | {f,f} |     0.002 |       0.000113
+     4 | {New York, NY}         | {f,f} |  0.001967 |       0.000114
+     5 | {Atlanta, GA}          | {f,f} |  0.001633 |        3.3e-05
+     6 | {Sacramento, CA}       | {f,f} |  0.001433 |        7.8e-05
+     7 | {Miami, FL}            | {f,f} |    0.0014 |          6e-05
+     8 | {Dallas, TX}           | {f,f} |  0.001367 |        8.8e-05
+     9 | {Chicago, IL}          | {f,f} |  0.001333 |        5.1e-05
+   ...
+```
+
+Выводимая информация показывает, что наиболее распространённую комбинацию города и штата образует Washington и DC, с частотой около 0.35% (в объёме выборки). Базовая частота этой комбинации (вычисленная из частот значений в отдельных столбцах) составляет всего 0.0027%, то есть эта оценка оказывается заниженной на два порядка.
+
+Объекты статистики **MCV** рекомендуется создавать только для тех сочетаний столбцов, ***которые действительно используются в условиях вместе***.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
