--- a/001 Администрирование/002 Структура данных/003 Временные объекты.md
+++ b/001 Администрирование/002 Структура данных/003 Временные объекты.md
@@ -1,2 +1,39 @@
 [Setting location of temp files](https://dba.stackexchange.com/questions/167549/setting-location-of-temp-files-for-postgresql-backend-9-3-10)
 
+### General
+There is a big problem with a_horse_with_no_name's solution. Not all instances of PostgreSQL even have a $PGDATA/base/pgsql_tmp because that entire path is actually created as needed in those instances. It doesn't even exist until needed, and it is destroyed when it is no longer required, so you can't create a symlink on an entire path that doesn't exist and that gets dynamically created then destroyed. You need to configue the temp tablespace location in the postgresql.conf file using the temp_tablespaces parameter (https://www.postgresql.org/docs/9.3/static/runtime-config-client.html#GUC-TEMP-TABLESPACES). 
+### temp_tablespaces (string) 
+```
+This variable specifies tablespaces in which to create temporary objects
+(temp tables and indexes on temp tables) when a CREATE command does not explicitly specify a tablespace.  
+Temporary files for purposes such as sorting large data sets are also created in these tablespaces.  
+The value is a list of names of tablespaces.  
+When there is more than one name in the list, PostgreSQL chooses a random member of the list each time a temporary object
+is to be created; except that within a transaction, successively  
+created temporary objects are placed in successive tablespaces from the list.
+If the selected element of the list is an empty string, PostgreSQL will automatically use
+the default tablespace of the current database instead.
+
+When temp_tablespaces is set interactively, specifying a nonexistent tablespace is an error,
+as is specifying a tablespace for which the user does not have CREATE privilege.
+However, when using a previously set value, nonexistent tablespaces are ignored,
+as are tablespaces for which the user lacks CREATE privilege.
+In particular, this rule applies when using a value set in postgresql.conf.
+
+The default value is an empty string, which results in all temporary objects
+being created in the default tablespace of the current database.
+```
+
+This is because the temp_tablespace parameter not only designates the location of all temporary tables  
+created by the CREATE command that do not have an explicit tablespace named at the time  
+they are created, but also designates the location  
+of all temporary files used for joins, sorts, and other overhead processing  
+(https://www.postgresql.org/message-id/490ABE1D.3060700%40deriva.de).
+```
+    temp_tablespaces (string)
+    This variable specifies tablespace(s) in which to create temporary
+    objects (temp tables and indexes on temp tables) when a CREATE
+    command does not explicitly specify a tablespace. Temporary files
+    for purposes such as sorting large data sets are also created in
+    these tablespace(s).
+```
